src/styles/ChatInterface.scss
.chat-interface {
  position: relative;
  width: 100%;
  padding: 0 1rem;

  .recepient-menu {
    padding: 1rem 0;
    border-bottom: 1px solid #e8e8e8;
    margin-bottom: 1rem;
    .recepient-name {
      font-weight: 400;
      font-size: 1.25rem;
    }
  }

  .message-thread {
    text-overflow: wrap;
    position: relative;
    .message-text {
      margin-bottom: 4rem;
      width: 100%;
      clear: both;
      .sent {
        background: dodgerblue;
        float: right;
        flex-grow: wrap;
        display: flex;
        margin-left: 4em;
        border-radius: 30px;
        padding: 10px 35px;
        border: 1px solid #e8e8e8;
      }
      .received {
        background: mediumseagreen;
        float: left;
        flex-grow: wrap;
        display: flex;
        margin-right: 4em;
        border-radius: 30px;
        padding: 10px 35px;
        border: 1px solid #e8e8e8;
      }
      .meta {
        display: none;
        font-size: 9px;
        color: #222;
      }
      &:hover .meta {
        display: block;
      }
      .message-image {
        max-height: 200px;
        max-width: 100%;
        width: auto;
        padding: 2px;
        display: block;
        margin: 0 auto;
      }
    }
    .isTyping {
      background: #ccc;
      padding: 10px 20px;
      border-radius: 20px;
      width: 15px;
      display: flex;
      justify-content: center;
      clear: both;
      margin-top: 1em;
    }
  }

  .message-input {
    position: absolute;
    bottom: 0;
    display: flex;
    align-content: flex-start;
    width: 100%;
    .textinput {
      height: 35px;
      border: 2px solid #e8e8e8;
      border-radius: 5px;
      flex-basis: 90%;
      font-size: 1rem;
    }
  }
  .preview-image {
    .image {
      max-height: 100px;
      position: absolute;
      top: -140px;
    }
  }
}

